trunk/Archive2/6b/0bb09a99bba204/output
main.cpp:7:18: error: no template named 'is_same_t' in namespace 'std'; did you mean 'is_same'?
   auto x = std::is_same_t<int, int>();
            ~~~~~^~~~~~~~~
                 is_same
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/type_traits:1278:12: note: 'is_same' declared here
    struct is_same
           ^
1 error generated.
